// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component | ArticleCard.vue when adminMode is not defined template should match snapshot 1`] = `
<article
  class="article"
>
  <a
    class="article__link"
    href="/articles/58"
  >
    <h2
      class="article__title"
    >
      Pierre somewhere
    </h2>
  </a>
  <div
    class="article__content"
  >
    <img
      alt="Pierre somewhere"
      class="article__image"
      lazy="loading"
      rel="noreferrer"
      src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
    />
  </div>
  <footer
    class="article__footer"
  >
    
    <app-button-stub
      allowmultipleclick="false"
      class="app-button"
      hide="false"
      tag="button"
      text="Read the article"
    />
    <app-button-stub
      allowmultipleclick="false"
      class="app-button link"
      hide="false"
      href="https://www.dropbox.com/sh/k79oskpopi9lm8v/AABst0JslmKYw3Rhx9BjwJxMa?dl=0"
      rel="noreferrer"
      tag="a"
      target="_blank"
      text="Discover the pictures"
    />
    
  </footer>
</article>
`;

exports[`Component | ArticleCard.vue when adminMode is not defined template should match snapshot when lazy is false 1`] = `
<article
  class="article"
>
  <a
    class="article__link"
    href="/articles/58"
  >
    <h2
      class="article__title"
    >
      Pierre somewhere
    </h2>
  </a>
  <div
    class="article__content"
  >
    <img
      alt="Pierre somewhere"
      class="article__image important"
      src="webf"
      width="200"
    />
  </div>
  <footer
    class="article__footer"
  >
    
    <app-button-stub
      allowmultipleclick="false"
      class="app-button"
      hide="false"
      tag="button"
      text="Read the article"
    />
    <app-button-stub
      allowmultipleclick="false"
      class="app-button link"
      hide="false"
      href="https://www.dropbox.com/sh/k79oskpopi9lm8v/AABst0JslmKYw3Rhx9BjwJxMa?dl=0"
      rel="noreferrer"
      tag="a"
      target="_blank"
      text="Discover the pictures"
    />
    
  </footer>
</article>
`;

exports[`Component | ArticleCard.vue when adminMode is true should match snapshot 1`] = `
<article
  class="article"
>
  <a
    class="article__link"
    href="/articles/58"
  >
    <h2
      class="article__title"
    >
      Pierre somewhere
    </h2>
  </a>
  <div
    class="article__content"
  >
    <img
      alt="Pierre somewhere"
      class="article__image"
      lazy="loading"
      rel="noreferrer"
      src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
    />
  </div>
  <footer
    class="article__footer"
  >
    
    <form>
      <app-button-stub
        allowmultipleclick="false"
        class="app-button chapter-button"
        disabled="false"
        hide="false"
        tag="button"
        text="Repair the chapter"
      />
      <input
        class="chapter-input"
      />
    </form>
    <app-button-stub
      allowmultipleclick="false"
      class="app-button"
      disabled="false"
      hide="false"
      tag="button"
      text="Repair the article"
    />
    <app-button-stub
      allowmultipleclick="false"
      class="app-button light"
      disabled="false"
      hide="false"
      tag="button"
      text="Delete the article"
    />
    
  </footer>
</article>
`;
